--- a/src/app/src/main/res/layout/activity_main.xml
+++ b/src/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,29 @@
         android:orientation="horizontal"
         android:gravity="center">
 
-        <Button
-            android:id="@+id/browserBtn"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <Button
+            android:id="@+id/browserBtn"
+            android:layout_width="120dp"
+            android:layout_height="60dp"
             android:text="Take photo"
             app:icon="@drawable/ic_browser"
             android:layout_marginLeft="10dp">
-        </Button>
+            </Button>
+
+            <Button
+            android:id="@+id/browserBtnShare"
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:text="Share"
+            app:icon="@drawable/ic_browser_share"></Button>
+
+    </LinearLayout>
 
         <ImageView
             android:id="@+id/imageView1"
